// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table students {
  id integer [primary key]
  first_name varchar
  last_name varchar
  email varchar
  address varchar
  student_no varchar
  created_at timestamp
  updated_at timestamp
}

Table courses {
  id integer [primary key]
  name varchar
  description text
  created_at timestamp
  updated_at timestamp
}

Table enrollments {
  id integer [primary key]
  student_id integer [not null, ref: > students.id]
  course_id integer [not null, ref: > courses.id]
  enrolled_at timestamp
  created_at timestamp
  updated_at timestamp
}

